--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/file": "^5.30.0",
     "@ionic-native/file-transfer": "^5.30.0",
+    "@ionic-native/in-app-browser": "^5.32.1",
     "@ionic-native/ionic-webview": "^5.31.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/sqlite": "^5.30.0",
@@ -56,6 +57,7 @@
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-file-transfer": "^1.7.1",
+    "cordova-plugin-inappbrowser": "^5.0.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -88,7 +90,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-file": {},
       "cordova-plugin-dbcopy": {},
-      "cordova-plugin-file-transfer": {}
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "ios"
